--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,6 +162,13 @@ body {
   background-color: var(--card-background);
   margin: 5.5rem 0;
 }
+
+.division-skills {
+  width: 100%;
+  height: 1px;
+  background-color: var(--card-background);
+  /* margin: 5.5rem 0; */
+}
 /* Projects */
 #projects {
   display: flex;
