--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,7 +63,9 @@ a {
   text-decoration: none;
   color: var(--text-color);
 }
-
+p {
+  font-size: 15px;
+}
 /* Main styling */
 body {
   background: var(--bg-primary);
@@ -189,11 +191,11 @@ body {
 }
 
 .card .project-bio p {
-  font-size: 0.83rem;
+  font-size: 0.86rem;
 }
 
 .card .project-bio h3 {
-  font-size: 0.9rem;
+  font-size: 1.5rem;
 }
 
 .project-info {
